--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,42 @@
+# https://peps.python.org/pep-0517/
 [build-system]
-requires = ["setuptools", "numpy>=1.12.0"]
+requires = ["setuptools >=61.0.0", "numpy >=1.12.0"]
 build-backend = "setuptools.build_meta"
+
+# https://peps.python.org/pep-0621/
+[project]
+name = "pymmcore"
+description = "Python bindings for MMCore, Micro-Manager's device control layer"
+dynamic = ["version", "readme"]
+requires-python = ">=3.7"
+license = { text = "BSD 3-Clause License" }
+authors = [{ name = "Micro-Manager Team" }]
+classifiers = [
+    "Development Status :: 5 - Production/Stable",
+    "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
+    "Operating System :: MacOS :: MacOS X",
+    "Operating System :: Microsoft :: Windows",
+    "Operating System :: POSIX :: Linux",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: Implementation :: CPython",
+    "Topic :: Scientific/Engineering",
+    "Topic :: System :: Hardware :: Hardware Drivers",
+    "Typing :: Typed",
+]
+dependencies = ["numpy >=1.12.0"]
+
+[project.urls]
+homepage = "https://micro-manager.org"
+repository = "https://github.com/micro-manager/pymmcore"
+
+
+[tool.setuptools.dynamic]
+version = { attr = "pymmcore._version.__version__" }
+readme = { file = ["README.md"], content-type = "text/markdown" }
+
+[tool.setuptools.packages.find]
+include = ["pymmcore*"]
+
+[tool.setuptools.package-data]
+"*" = ["py.typed", ".pyi"]
