--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,13 +54,13 @@ include = ["pymmcore*"]
 [tool.cibuildwheel]
 # Skip 32-bit builds & PyPy wheels on all platforms
 skip = ["*-win32", "*-manylinux_i686", "pp*", "*musllinux*"]
-# test-requires = "pytest"
-# test-command = 'pytest "{project}/tests" -v'
+test-requires = "pytest"
+test-command = 'pytest "{project}/tests" -v'
 # test-extras = ["test"]
 # manylinux-x86_64-image = "manylinux_2_24"
 
-# [tool.cibuildwheel.macos]
-# archs = ["x86_64", "arm64"]
+[tool.cibuildwheel.macos]
+archs = ["x86_64", "arm64"]
 # repair-wheel-command = [
 #     "DYLD_LIBRARY_PATH=$REPAIR_LIBRARY_PATH delocate-listdeps {wheel}",
 #     "DYLD_LIBRARY_PATH=$REPAIR_LIBRARY_PATH delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}",
