--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,23 +53,12 @@ include = ["pymmcore*"]
 
 [tool.cibuildwheel]
 # Skip 32-bit builds & PyPy wheels on all platforms
-skip = ["*-win32", "*-manylinux_i686", "pp*", "*musllinux*"]
+skip = ["*-manylinux_i686", "*-musllinux_i686", "*-win32", "pp*"]
+build = ["cp37-*", "cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*"]
 test-requires = "pytest"
 test-command = 'pytest "{project}/tests" -v'
-# test-extras = ["test"]
-# manylinux-x86_64-image = "manylinux_2_24"
+test-skip = "*-musllinux*"
 
 [tool.cibuildwheel.macos]
+# https://cibuildwheel.readthedocs.io/en/stable/faq/#apple-silicon
 archs = ["x86_64", "arm64"]
-# repair-wheel-command = [
-#     "DYLD_LIBRARY_PATH=$REPAIR_LIBRARY_PATH delocate-listdeps {wheel}",
-#     "DYLD_LIBRARY_PATH=$REPAIR_LIBRARY_PATH delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}",
-# ]
-
-# [tool.cibuildwheel.linux]
-# before-all = [
-#     'echo "deb http://archive.debian.org/debian stretch main" > /etc/apt/sources.list',
-#     "apt-get update",
-#     "apt-get install -y --allow-downgrades liblzma5=5.2.2-1.2+b1 liblzma-dev=5.2.2-1.2+b1 libtiff5-dev=4.0.8-2+deb9u5",
-#     "cp {project}/src/sdk/Linux/x86_64/lib/* /lib",
-# ]
