--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,12 +52,13 @@ include = ["pymmcore*"]
 
 
 [tool.cibuildwheel]
-# Skip 32-bit builds & PyPy wheels on all platforms
-skip = ["*-manylinux_i686", "*-musllinux_i686", "*-win32", "pp*"]
+# Skip 32-bit builds, musllinux, and PyPy wheels on all platforms
+# Note: use of PTHREAD_MUTEX_RECURSIVE_NP in DeviceThreads.h
+# is specific to glibc and not available in musl-libc
+skip = ["*-manylinux_i686", "*-musllinux*", "*-win32", "pp*"]
 build = ["cp37-*", "cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*"]
 test-requires = "pytest"
 test-command = 'pytest "{project}/tests" -v'
-test-skip = "*-musllinux*"
 
 [tool.cibuildwheel.macos]
 # https://cibuildwheel.readthedocs.io/en/stable/faq/#apple-silicon
