--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ include = ["pymmcore*"]
 # Note: use of PTHREAD_MUTEX_RECURSIVE_NP in DeviceThreads.h
 # is specific to glibc and not available in musl-libc
 skip = ["*-manylinux_i686", "*-musllinux*", "*-win32", "pp*"]
-build = ["cp37-*", "cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*"]
+build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*"]
 test-requires = "pytest"
 test-command = 'pytest "{project}/tests" -v'
 
