--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,10 @@ jobs:
         uses: pypa/cibuildwheel@v2.16
         env:
           CIBW_ARCHS_MACOS: "${{ matrix.macos_arch }}"
+          # Python on Linux is usually configured to add debug information,
+          # which increases binary size by ~11-fold. Remove for the builds we
+          # distribute.
+          CIBW_ENVIRONMENT_LINUX: "LDFLAGS=-Wl,--strip-debug"
 
       - uses: actions/upload-artifact@v3
         with:
