--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 [build-system]
 requires = [
     "setuptools >=61.0.0",
+    "swig >=4",
     "numpy==1.14.5; python_version=='3.7'",
     "numpy==1.17.3; python_version=='3.8'",
     "numpy==1.19.3; python_version=='3.9'",
