--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,18 +14,6 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  # check that sdist contains all files and that extra files
-  # are explicitly ignored in manifest or pyproject
-  check-manifest:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          submodules: "recursive"
-      - name: Check manifest
-        run: pipx run check-manifest
-
   test:
     name: Test ${{ matrix.os }} py${{ matrix.python-version }} np${{ matrix.numpy }}
     runs-on: ${{ matrix.os }}
@@ -49,6 +37,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: "recursive"
+
+      - uses: ilammy/msvc-dev-cmd@v1
+        with:
+          toolset: "14.2"
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
@@ -123,10 +115,6 @@ jobs:
         env:
           CIBW_VERBOSE: 1
           CIBW_ARCHS_MACOS: "${{ matrix.macos_arch }}"
-          # Python on Linux is usually configured to add debug information,
-          # which increases binary size by ~11-fold. Remove for the builds we
-          # distribute.
-          CIBW_ENVIRONMENT_LINUX: "LDFLAGS=-Wl,--strip-debug"
 
       - uses: actions/upload-artifact@v4
         with:
@@ -144,8 +132,7 @@ jobs:
 
       - name: Build sdist
         run: |
-          pip install -U pip build check-manifest
-          check-manifest
+          pip install -U pip build
           python -m build --sdist
 
       - uses: actions/upload-artifact@v4
