--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,12 +32,11 @@ dependencies = ["numpy >=1.12.0"]
 homepage = "https://micro-manager.org"
 repository = "https://github.com/micro-manager/pymmcore"
 
-
 [tool.setuptools.dynamic]
 version = { attr = "pymmcore._version.__version__" }
 
-[tool.setuptools.packages.find]
-include = ["pymmcore*"]
+[tool.setuptools.package-dir]
+"" = "src"
 
 [tool.setuptools.package-data]
 "*" = ["py.typed", ".pyi"]
