Upgrade MMDevice/MMCore and fix macro defs

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,4 +9,4 @@ prune mmCoreAndDevices/DeviceAdapters
 prune mmCoreAndDevices/m4
 prune mmCoreAndDevices/.github
 recursive-exclude mmCoreAndDevices *.txt *.md *.am .project \
-    *.vcxproj* *.sln *.props *.cdt* secret-device-*
+    *.vcxproj* *.sln *.props *.cdt* secret-device-* meson.build *.wrap
