--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ['3.8', '3.10', '3.12']
         numpy: ['~=1.23', '~=1.24', '~=1.26', '>=2.0.0b1']
 
@@ -56,6 +56,7 @@ jobs:
         run: pytest -v
 
   build_wheels:
+    if: github.event_name != 'pull_request'
     name: Build wheels on ${{ matrix.os }} ${{ matrix.macos_arch }}
     runs-on: ${{ matrix.os }}
     strategy:
