--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,9 +32,21 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ["3.8", "3.10", "3.12"]
-        numpy: ["==1.23.5", "~=1.26", ">=2.0.0b1"]
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        include:
+          - python-version: "3.8"
+            os: ubuntu-latest
+            numpy: "==1.23.5"
+          - python-version: "3.10"
+            os: ubuntu-latest
+            numpy: "~=1.26"
+          - python-version: "3.9"
+            os: windows-latest
+            numpy: ">=2.0.0b1"
+          - python-version: "3.12"
+            os: ubuntu-latest
+            numpy: ">=2.0.0b1"
 
     steps:
       - uses: actions/checkout@v4
