--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,11 +72,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-22.04, windows-2022]
+        os: [ubuntu-latest, windows-latest]
         include:
-          - os: macos-12
+          - os: macos-13
             macos_arch: "x86_64"
-          - os: macos-12
+          - os: macos-latest
             macos_arch: "arm64"
 
     steps:
