--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 # https://peps.python.org/pep-0517/
 [build-system]
-requires = ["setuptools ==72.1.0", "swig >=4.1", "numpy>=2.0.0"]
+requires = ["setuptools ==72.1.0", "swig ==4.2.1", "numpy>=2.0.0"]
 build-backend = "setuptools.build_meta"
 
 # https://peps.python.org/pep-0621/
@@ -57,6 +57,8 @@ test-skip = "*-macosx_arm64"
 [tool.cibuildwheel.macos]
 # https://cibuildwheel.readthedocs.io/en/stable/faq/#apple-silicon
 archs = ["x86_64", "arm64"]
+# Needed for C++17 support on macOS
+environment = { MACOSX_DEPLOYMENT_TARGET = "10.14" }
 
 [tool.check-manifest]
 ignore = [".editorconfig", "Dockerfile", "maintainer-notes.md", ".gitmodules"]
