--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,7 +93,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest]
         include:
-          - os: macos-13
+          - os: macos-15-intel
             macos_arch: "x86_64"
           - os: macos-latest
             macos_arch: "arm64"
